kubernetes/otus-crud-webapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-crud-webapi-service
  labels:
    app: otus-crud-webapi
spec:
  selector:
    app: otus-crud-webapi
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: web
