kubernetes/otus-crud-webapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-crud-webapi-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: "/"
            backend:
              service:
                name: otus-crud-webapi-service
                port:
                  number: 80
            pathType: Prefix
